--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
             </div>
            
         </div>
-        <img class="heroimage" src="Assets/heroimage1.jpeg" alt="">
+        <img class="heroimage" src="heroimage1.jpeg" alt="">
     </div>
 <div class="hero2">
     <div class="headhero2"><h1>Our best Grabs</h1></div>
     
     <div class="batchcards">
         <div class="class11th">
-            <a href="#"><img class="imgcards" src="Assets/11TH OFF.png" alt=""></a>
+            <a href="#"><img class="imgcards" src="11TH OFF.png" alt=""></a>
         </div>
         <div class="class11th">
-            <a href="#"><img class="imgcards" src="Assets/12TH OFF.png" alt=""></a>
+            <a href="#"><img class="imgcards" src="12TH OFF.png" alt=""></a>
         </div>
     </div>
 </div>
 
 <div class="hero3">
     <div class="values1">
-        <div> <img class="imagee" src="Assets/Live doubt.jpeg" alt=""></div>
+        <div> <img class="imagee" src="Live doubt.jpeg" alt=""></div>
         <div class="hero3text">
             <div class="headhero3"><h1>Live doubt clearing sessions</h1></div>
             <div><p class="deshero3">doubt clearing sessions with the best tutors rated by the students</p></div>
@@ -53,10 +53,10 @@
             <div class="headhero3"><h1>Recorded Lectures with all time access</h1></div>
             <div><p class="deshero3">doubt clearing sessions with the best tutors rated by the students</p></div>
         </div>
-        <div> <img class="imagee" src="Assets/Recorded lectures.jpeg" alt=""></div>
+        <div> <img class="imagee" src="Recorded lectures.jpeg" alt=""></div>
     </div>
     <div class="values3">
-        <div class="imggg"> <img class="imagee" src="Assets/All time persaonal Assistance.jpeg" alt=""></div>
+        <div class="imggg"> <img class="imagee" src="All time persaonal Assistance.jpeg" alt=""></div>
         <div class="hero3text">
             <div class="headhero3"><h1>All time personal assistance</h1></div>
             <div><p class="deshero3">doubt clearing sessions with the best tutors rated by the students</p></div>
@@ -68,7 +68,7 @@
             <div class="headhero3"><h1>Live doubt clearing sessions</h1></div>
             <div><p class="deshero3">doubt clearing sessions with the best tutors rated by the students</p></div>
         </div>
-        <div> <img class="imagee" src="Assets/Live doubt.jpeg" alt=""></div>
+        <div> <img class="imagee" src="Live doubt.jpeg" alt=""></div>
     </div>
 </div>
 </body>
