--- a/index.html
+++ b/index.html
@@ -71,5 +71,48 @@
         <div> <img class="imagee" src="Live doubt.jpeg" alt=""></div>
     </div>
 </div>
+<div class="features flex">
+    <div class="fcontent">
+        <span class="flex"> 
+            <p class="bold ftext"> ✅ All Boards, One Solution – </p>
+            <p class="ftext"> CBSE, ICSE, IB & State, tailored learning for all. </p>
+        </span>
+        <span class="flex"> 
+            <p class="bold ftext"> 🎥 Live Learning, Daily – </p>
+            <p class="ftext"> Interactive classes for every subject, every day.
+            </p>
+        </span>
+        <span class="flex"> 
+            <p class="bold ftext"> 🤖 AI-Powered Homework Help – </p>
+            <p class="ftext"> Instant WhatsApp support for assignments. </p>
+        </span>
+        <span class="flex"> 
+            <p class="bold ftext"> 🚀 Future-Ready Skills – </p>
+            <p class="ftext"> Weekly sessions & free career resources. </p>
+        </span>
+        <span class="flex"> 
+            <p class="bold ftext"> 👨‍👩‍👧 Parental Guidance & Support – </p>
+            <p class="ftext"> Expert counseling for engaged learning.
+            </p>
+        </span>
+        <span class="flex"> 
+            <p class="bold ftext"> 🏆 Win Big, Learn More – </p>
+            <p class="ftext"> ₹10 Lakhs in scholarships & prizes! </p>
+        </span>
+        <span class="flex"> 
+            <p class="bold ftext"> 🌍 Global Internships & Training – </p>
+            <p class="ftext"> Work with top organizations. </p>
+        </span>
+        <span class="flex"> 
+            <p class="bold ftext"> 📚 Comprehensive Curriculum – </p>
+            <p class="ftext"> Latest innovations in CBSE, ICSE, IB & State Boards. </p>
+        </span>
+        <span class="flex"> 
+            <p class="bold ftext"> 💡 Emotional & Social Growth – </p>
+            <p class="ftext"> Focus on well-being & development. </p>
+        </span>
+    </div>
+    <div class="headfeatures bold">OUR EXCLUSIVE FEATURES</div>
+</div>
 </body>
 </html>
