mobile screen updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SOEL</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <div class="head">
+    <link rel="stylesheet" href="stylemobile.css">   
         <head class="logo">SOEL</head>
     </div>
     <div class="hero1">
@@ -62,7 +63,7 @@
             <div><p class="deshero3">doubt clearing sessions with the best tutors rated by the students</p></div>
         </div>
     </div>
-    <div class="values4">
+    <div class="values2">
         
         <div class="hero3text">
             <div class="headhero3"><h1>Live doubt clearing sessions</h1></div>
@@ -71,44 +72,44 @@
         <div> <img class="imagee" src="Live doubt.jpeg" alt=""></div>
     </div>
 </div>
-<div class="features flex">
+<div class="features flex featuresmobile">
     <div class="fcontent">
-        <span class="flex"> 
-            <p class="bold ftext"> ✅ All Boards, One Solution – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext "> ✅ All Boards, One Solution:  </p>
             <p class="ftext"> CBSE, ICSE, IB & State, tailored learning for all. </p>
         </span>
-        <span class="flex"> 
-            <p class="bold ftext"> 🎥 Live Learning, Daily – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext"> 🎥 Live Learning, Daily: </p>
             <p class="ftext"> Interactive classes for every subject, every day.
             </p>
         </span>
-        <span class="flex"> 
-            <p class="bold ftext"> 🤖 AI-Powered Homework Help – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext"> 🤖 AI-Powered Homework Help: </p>
             <p class="ftext"> Instant WhatsApp support for assignments. </p>
         </span>
-        <span class="flex"> 
-            <p class="bold ftext"> 🚀 Future-Ready Skills – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext"> 🚀 Future-Ready Skills: </p>
             <p class="ftext"> Weekly sessions & free career resources. </p>
         </span>
-        <span class="flex"> 
-            <p class="bold ftext"> 👨‍👩‍👧 Parental Guidance & Support – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext"> 👨‍👩‍👧 Parental Guidance & Support: </p>
             <p class="ftext"> Expert counseling for engaged learning.
             </p>
         </span>
-        <span class="flex"> 
-            <p class="bold ftext"> 🏆 Win Big, Learn More – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext"> 🏆 Win Big, Learn More: </p>
             <p class="ftext"> ₹10 Lakhs in scholarships & prizes! </p>
         </span>
-        <span class="flex"> 
-            <p class="bold ftext"> 🌍 Global Internships & Training – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext"> 🌍 Global Internships & Training: </p>
             <p class="ftext"> Work with top organizations. </p>
         </span>
-        <span class="flex"> 
-            <p class="bold ftext"> 📚 Comprehensive Curriculum – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext"> 📚 Comprehensive Curriculum: </p>
             <p class="ftext"> Latest innovations in CBSE, ICSE, IB & State Boards. </p>
         </span>
-        <span class="flex"> 
-            <p class="bold ftext"> 💡 Emotional & Social Growth – </p>
+        <span class="flex flexmobile"> 
+            <p class="bold ftext"> 💡 Emotional & Social Growth: </p>
             <p class="ftext"> Focus on well-being & development. </p>
         </span>
     </div>
