--- a/index.html
+++ b/index.html
@@ -115,5 +115,40 @@
     </div>
     <div class="headfeatures bold">OUR EXCLUSIVE FEATURES</div>
 </div>
+<footer>
+    <div class="footer-container">  
+        <div class="footer-section">
+            <h3>Class</h3>
+            <ul>
+                <li><a href="#">8th</a></li>
+                <li><a href="#">9th</a></li>
+                <li><a href="#">10th</a></li>
+                <li><a href="#">11th science</a></li>
+                <li><a href="#">11th commerece</a></li>
+                <li><a href="#">11th Atrs</a></li>
+                <li><a href="#">12th science</a></li>
+                <li><a href="#">12th commerece</a></li>
+                <li><a href="#">12th Arts</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Contact Information</h3>
+            <p><strong>Email: </strong>care@soel.in</p>
+<h3><strong>Address:</strong><br></h3>
+                <p>SOEL foundation,<br>
+                Bomasandra,<br>
+                Banglore, India.</p>
+        </div>
+        <div class="footer-section sociall">
+            <h3>Follow Us</h3>
+            <div class="social-icons">
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+    </div>   
+    </div>
+</footer>
 </body>
 </html>
