major phone screen changes

--- a/index.html
+++ b/index.html
@@ -115,6 +115,40 @@
     </div>
     <div class="headfeatures bold">OUR EXCLUSIVE FEATURES</div>
 </div>
+
+
+<div class="conform">
+<div class="over">
+    <div class="contact-left-title">
+        <div id='overlay' class="contact-left-title"><h1>GET IN TOUCH</h1></div>
+        <h2>CONTACT</h2>
+    </div>
+</div>
+    <div class="contact">
+        <div>
+            <img class="conimg" src="ask.png" alt="">
+            <h1 class="headtext">Let's talk</h1>
+        </div>
+<div class="fill">
+        <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
+        <input type="hidden" name="access_key" value="e17e4e74-6599-45f3-b40b-ea95d9f026f7">
+        <input type="text" name="name" placeholder="Your name" class="contact-inputs" required>
+        <input type="Email" name="email" placeholder="Your Email" class="contact-inputs" required>
+        <input type="number" name="number" placeholder="Your Conatact Number" class="contact-inputs" required>
+        <textarea name="message" placeholder="your message" class="contact-inputs" required></textarea>
+        <button type="submit">Submit <i class="fa-solid fa-arrow-right"></i></button>    
+    </form>
+        <div class="contact-right">
+        </div>
+</div>
+        <div>
+            <img class="conimg" src="choose.png" alt="">
+            <h1 class="headtext">Choose best <br> for your kid</h1>
+        </div>
+    </div>
+
+</div>
+
 <footer>
     <div class="footer-container">  
         <div class="footer-section">
