--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="herodes">
                 All in one package for your every solution <br> with best package
             </p>
-            <a href="#"><button class="button">Learn More <i class="fa-solid fa-arrow-right"></i></button></a>
+            <a href="presentation.html"><button class="button">Learn More <i class="fa-solid fa-arrow-right"></i></button></a>
             </div>
             <div class="off">
                 <h2 class="offer">UPTO 50% OFF </h2>
