--- a/presentation.html
+++ b/presentation.html
@@ -6,6 +6,6 @@
     <title>Presentation</title>
 </head>
 <body>
-    <iframe src="SoEL.pdf" frameborder="0" width="100%" height="100%"></iframe>
+    <iframe src="SoEL.pdf" frameborder="0" height="850px" width="100%"></iframe>
 </body>
 </html>
