--- a/presentation.html
+++ b/presentation.html
@@ -6,6 +6,7 @@
     <title>Presentation</title>
 </head>
 <body>
-    <iframe src="SoEL.pdf" frameborder="0" height="850px" width="100%"></iframe>
+    
+    <embed src="SoEL.pdf" type="" width="100%" height="700px">
 </body>
 </html>
