nav link updated

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     <link rel="stylesheet" href="stylemobile.css">   
 
     <body>
-        
-        <head class="logo">SOEL</head>
+
+    <head class="navbar">
+        <div class="logo">SOEL</div>
+
+        <div class="nav">
+            <a href="index.html" class="navlink">Home</a>
+            <a href="presentation.html" class="navlink">Plans</a>
+            <a href="#" class="navlink">About us</a>
+        </div>
+
+    </head>
+
     </div>
     <div class="hero1">
         <div class="herotext">
