--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 
     <head class="navbar">
-        <div class="logo"> <a href="index.html"><img src="soß" alt=""></a></div>
+        <div> <a href="index.html"><img class="logo" src="seol trans.png" alt=""></a></div>
 
         <div class="nav">
             <a href="index.html" class="navlink">Home</a>
