--- a/presentation.html
+++ b/presentation.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentation</title>
-</head>
-<body>
-    
+    <title>SOEL</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <div class="head">
+    <link rel="stylesheet" href="stylemobile.css">   
+
+    <body>
+
+    <head class="navbar">
+        <div> <a href="index.html"><img class="logo" src="SOEL logo.png" alt=""></a></div>
+
+        <div class="nav">
+            <a href="index.html" class="navlink">Home</a>
+            <a href="presentation.html" class="navlink">Plans</a>
+            <a href="#" class="navlink">About us</a>
+        </div>
+
+    </head>
+
+    </div>
+
     <embed src="SoEL.pdf" type="" width="100%" height="700px">
 </body>
 </html>
