--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="stylemobile.css">   
 
     <body>
-
     <head class="navbar">
-        <div> <a href="index.html"><img class="logo" src="SOEL logo.png" alt=""></a> </div>
+        <div class="logphone"> <a href="index.html"><img class="logo" src="SOEL logo.png" alt=""></a> </div>
 
         <div class="nav">
             <a href="index.html" class="navlink">Home</a>
@@ -20,7 +19,6 @@
         </div>
 
     </head>
-
     </div>
     <div class="hero1">
         <div class="herotext">
